<resources>
    <string name="app_name">MapsDemo</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_search">Search</string>
    <string name="location">Location:</string>
    <string name="search">Search</string>
    <string name="name">Name:</string>
    <string name="price">Price:</string>
    <string name="desc">Description:</string>
    <string name="names">Name:</string>
    <string name="user_name">User Name</string>
    <string name="password">password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_hint">something@email.com</string>
    <string name="confirm_password">confirm password</string>
    <string name="options">Options</string>
    <string name="accept_order">Accept Order</string>
    <string name="order">Order</string>
    <string name="runners">Runners</string>
    <string name="become_runner">Become a Runner</string>
    <string name="main_menu">Main Menu</string>
    <string name="accept_terms">Accept Terms</string>
    <string name="loading">Loading</string>
    <string name="debug">Debug</string>
    <string name="finalOrder">Finalize Order</string>
    <string name="submit">Submit Order</string>
</resources>
